# neural_matrix

./: .gitignore  CMakeLists.txt  README.md
matrix_lib/: CMakeLists.txt  Makefile  README.md  main.c
matrix_lib/include/: matrix.h
matrix_lib/src/: matrix.c
matrix_lib/tests/: test_matrix_init.c  test_matrix_math.c  test_matrix_operations.c
neural_networks/: CMakeLists.txt  README.md
neural_networks/include/: activation.h  dense_layer.h  layer.h  log.h  loss.h  optimization.h
neural_networks/src/: activation.c  dense_layer.c  layer.c  log.c  loss.c  main.c  optimization.c
neural_networks/tests/: CMakeLists.txt  activation_test.c  dense_layer_test.c  layer_test.c  loss_test.c  optimization_test.c
